--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>반갑습니다~</h1>
     <a href="">"https://o-san.hs.kr/"오산고</a>
     <a href="">"https://unam.hs.kr/"운암고</a>
-    <a href="">"https://www.seoultech.ac.kr/"서울과기대</a>
+    <a href="">"https://www.seoultech.ac.kr/"서울과기대</a><br>
+    <img src="장미.jpg">
   </body>
 </html>
  
