--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <a href="">"https://o-san.hs.kr/"오산고</a>
     <a href="">"https://unam.hs.kr/"운암고</a>
     <a href="">"https://www.seoultech.ac.kr/"서울과기대</a><br>
-    <img src="장미.jpg"><br>
+     <a href="sum.html" 힘 구하기</a><br>
+    <img src="장미.jpg"><br><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/eN5mG_yMDiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
