--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <a href="">"https://unam.hs.kr/"운암고</a>
     <a href="">"https://www.seoultech.ac.kr/"서울과기대</a><br>
      <a href="sum.html">합 구하기</a><br>
+    <a href="">"file:///D:/keun/sum.html/"</a>
+    <a href="">"file:///D:/keun/for.html/"</a>
+    <a href="">"file:///D:/keun/max.html/"</a>
+    <a href="">"file:///D:/keun/min.html/"</a>
+    
+     
     <img src="장미.jpg"><br><br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/eN5mG_yMDiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
