--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="">"file:///D:/keun/for.html/"</a>
     <a href="">"file:///D:/keun/max.html/"</a>
     <a href="">"file:///D:/keun/min.html/"</a>
+    <a href="">"file:///D:/keun/chart.html/"</a>
     
      
     <img src="장미.jpg"><br><br>
