--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <body>
     <h1>맹근오의 홈페이지</h1>
     <h1>반갑습니다~</h1>
-    <a href="">"https://o-san.hs.kr/"오산고</a>
-    <a href="">"https://unam.hs.kr/"운암고</a>
-    <a href="">"https://www.seoultech.ac.kr/"서울과기대</a><br>
+    <a href=">"https://o-san.hs.kr/"오산고</a><br>
+    <a href=">"https://unam.hs.kr/"운암고</a><br>
+    <a href=">"https://www.seoultech.ac.kr/"서울과기대</a><br>
      <a href="sum.html">합 구하기</a><br>
-    <a href="">"file:///D:/keun/sum.html/"</a>
-    <a href="">"file:///D:/keun/for.html/"</a>
-    <a href="">"file:///D:/keun/max.html/"</a>
-    <a href="">"file:///D:/keun/min.html/"</a>
-    <a href="">"file:///D:/keun/chart.html/"</a>
+    <a href=">"file:///D:/keun/sum.html/"</a><br>
+    <a href=">"file:///D:/keun/for.html/"</a><br>
+    <a href=">"file:///D:/keun/max.html/"</a><br>
+    <a href=">"file:///D:/keun/min.html/"</a><br>
+    <a href=">"file:///D:/keun/chart.html/"</a><br>
     
      
     <img src="장미.jpg"><br><br>
