--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href=">"file:///D:/keun/for.html/"</a><br>
     <a href=">"file:///D:/keun/max.html/"</a><br>
     <a href=">"file:///D:/keun/min.html/"</a><br>
-    <a href=">"file:///D:/keun/chart.html/"</a><br>
+    <a href = "chart.html:>차트 <a/><br>
     
      
     <img src="장미.jpg"><br><br>
